plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
	id 'eclipse'
	id 'war'
}

group = 'fr.arnaud.cleanarchitecture'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.liquibase:liquibase-core'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.platform:junit-platform-suite-api:1.9.0'

	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
	
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.apache.commons:commons-collections4:4.4'
	implementation 'commons-validator:commons-validator:1.7'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.apache.commons:commons-math3:3.6.1'
	
	implementation 'junit:junit:4.13.2'	
}

tasks.named('test') {
	useJUnitPlatform()
}
